# socket.io-client-cpp

./: .gitmodules  CMakeLists.txt
src/: ca_certificates.s  sio_socket.cpp  url_encode.h
src/internal/: sio_client_impl.cpp  sio_client_impl.h  sio_packet.cpp
